--- a/Amirhanov_Exam/Amirhanov_Exam/Pages/CallCenterPage.xaml
+++ b/Amirhanov_Exam/Amirhanov_Exam/Pages/CallCenterPage.xaml
@@ -7,36 +7,37 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="CallCenterPage">
+    <ScrollViewer Margin="10">
+        <Grid Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-    <Grid Margin="10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-
-        <DockPanel LastChildFill="False" Grid.Row="0">
-            <Image Source="../Images/logo.png" Height="50" DockPanel.Dock="Left"/>
-            <TextBlock Text="Это конец" 
+            <DockPanel LastChildFill="False" Grid.Row="0">
+                <Image Source="../Images/logo.png" Height="50" DockPanel.Dock="Left"/>
+                <TextBlock Text="Это конец" 
                 FontSize="24" 
                 Padding="10,0,0,0" 
                 VerticalAlignment="Center" 
                 DockPanel.Dock="Left"/>
-            <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
-                <Button Content="Добавить заявку" Margin="10" Click="AddOrder_Click"/>
-                <Button Content="Выйти" Margin="10" Click="Logout_Click" Width="100"/>
-            </StackPanel>
-        </DockPanel>
+                <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
+                    <Button Content="Добавить заявку" Margin="10" Click="AddOrder_Click"/>
+                    <Button Content="Выйти" Margin="10" Click="Logout_Click" Width="100"/>
+                </StackPanel>
+            </DockPanel>
 
-        <DataGrid x:Name="OrdersDataGrid" Grid.Row="1" AutoGenerateColumns="False" Margin="10">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="ID_Заявки" Binding="{Binding OrderID}"/>
-                <DataGridTextColumn Header="ID_Работника" Binding="{Binding EmployeeID}"/>
-                <DataGridTextColumn Header="Адрес" Binding="{Binding Address}"/>
-                <DataGridTextColumn Header="Количество комнат" Binding="{Binding RoomCount}"/>
-                <DataGridTextColumn Header="Площадь" Binding="{Binding TotalArea}"/>
-                <DataGridTextColumn Header="Дата" Binding="{Binding Date}"/>
-                <DataGridTextColumn Header="Статус" Binding="{Binding Statuses.StatusName}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-    </Grid>
+            <DataGrid x:Name="OrdersDataGrid" Grid.Row="1" AutoGenerateColumns="False" Margin="10">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="ID_Заявки" Binding="{Binding OrderID}"/>
+                    <DataGridTextColumn Header="ID_Работника" Binding="{Binding EmployeeID}"/>
+                    <DataGridTextColumn Header="Адрес" Binding="{Binding Address}"/>
+                    <DataGridTextColumn Header="Количество комнат" Binding="{Binding RoomCount}"/>
+                    <DataGridTextColumn Header="Площадь" Binding="{Binding TotalArea}"/>
+                    <DataGridTextColumn Header="Дата" Binding="{Binding Date}"/>
+                    <DataGridTextColumn Header="Статус" Binding="{Binding Statuses.StatusName}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
+    </ScrollViewer>
 </Page>
