--- a/Amirhanov_Exam/Amirhanov_Exam/Pages/CleaningMasterPage.xaml
+++ b/Amirhanov_Exam/Amirhanov_Exam/Pages/CleaningMasterPage.xaml
@@ -7,41 +7,49 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="CleaningMasterPage">
+    <ScrollViewer Margin="10">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-
-        <DockPanel LastChildFill="False" Grid.Row="0">
-            <Image Source="../Images/logo.png" Height="50" DockPanel.Dock="Left"/>
-            <TextBlock Text="Это конец" 
+            <DockPanel LastChildFill="False" Grid.Row="0">
+                <Image Source="../Images/logo.png" Height="50" DockPanel.Dock="Left"/>
+                <TextBlock Text="Это конец" 
          FontSize="24" 
          Padding="10,0,0,0" 
          VerticalAlignment="Center" 
          DockPanel.Dock="Left"/>
-            <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
-                <Button Content="Выйти" Margin="10" Click="Logout_Click" Width="100"/>
-            </StackPanel>
-        </DockPanel>
+                <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
+                    <Button Content="Выйти" Margin="10" Click="Logout_Click" Width="100"/>
+                </StackPanel>
+            </DockPanel>
 
-        <DataGrid x:Name="OrdersDataGrid" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True" Grid.Row="1">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Order ID" Binding="{Binding OrderID}" />
-                <DataGridTextColumn Header="Address" Binding="{Binding Address}" />
-                <DataGridTextColumn Header="Room Count" Binding="{Binding RoomCount}" />
-                <DataGridTextColumn Header="Total Area" Binding="{Binding TotalArea}" />
-                <DataGridTextColumn Header="Date" Binding="{Binding Date}" />
-                <DataGridTextColumn Header="Status" Binding="{Binding Statuses.StatusName}" />
-                <DataGridTemplateColumn Header="Change Status">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button Content="Выполнено" Click="ChangeStatus_Click" CommandParameter="{Binding OrderID}"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-            </DataGrid.Columns>
-        </DataGrid>
-    </Grid>
+            <DataGrid x:Name="OrdersDataGrid" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True" Grid.Row="1">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Order ID" Binding="{Binding OrderID}" />
+                    <DataGridTextColumn Header="Адресс" Binding="{Binding Address}" />
+                    <DataGridTextColumn Header="Количество комнат" Binding="{Binding RoomCount}" />
+                    <DataGridTextColumn Header="Площадь" Binding="{Binding TotalArea}" />
+                    <DataGridTextColumn Header="Дата" Binding="{Binding Date}" />
+                    <DataGridTextColumn Header="Статус" Binding="{Binding Statuses.StatusName}" />
+                    <DataGridTemplateColumn Header="Выберите статус">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Выполнено" Click="ChangeStatus_Click" CommandParameter="{Binding OrderID}"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Header="Отчеты">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Отчитаться" Click="AddReport_Click" CommandParameter="{Binding OrderID}"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
+    </ScrollViewer>
 </Page>
