--- a/Amirhanov_Exam/Amirhanov_Exam/Pages/EmployeesPage.xaml
+++ b/Amirhanov_Exam/Amirhanov_Exam/Pages/EmployeesPage.xaml
@@ -7,39 +7,50 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="EmployeesPage">
+    <ScrollViewer Margin="10">
+        <Grid Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-    <Grid Margin="10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-
-        <DockPanel LastChildFill="False" Grid.Row="0">
-            <Image Source="../Images/logo.png" Height="50" DockPanel.Dock="Left"/>
-            <TextBlock Text="Это конец" 
+            <DockPanel LastChildFill="False" Grid.Row="0">
+                <Image Source="../Images/logo.png" Height="50" DockPanel.Dock="Left"/>
+                <TextBlock Text="Это конец" 
         FontSize="24" 
         Padding="10,0,0,0" 
         VerticalAlignment="Center" 
         DockPanel.Dock="Left"/>
-            <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
-                <Button Content="Добавить заявку" Margin="10" Click="AddOrder_Click"/>
-                <Button Content="Выйти" Margin="10" Click="Logout_Click" Width="100"/>
+                <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
+                    <Button Content="Добавить сотрудника" Margin="10" Click="AddEmployee_Click"/>
+                    <Button Content="Выйти" Margin="10" Click="Logout_Click" Width="100"/>
+                </StackPanel>
+            </DockPanel>
+
+            <StackPanel Orientation="Horizontal" Grid.Row="1">
+                <TextBox x:Name="SearchTextBox" Width="200" Margin="5"/>
+                <ComboBox x:Name="RoleFilterComboBox" Width="200" Margin="5" DisplayMemberPath="RoleName" SelectedValuePath="RoleID"/>
+                <Button Content="Поиск" Margin="5" Click="SearchButton_Click"/>
             </StackPanel>
-        </DockPanel>
 
-        <StackPanel Orientation="Horizontal" Grid.Row="1">
-            <TextBox x:Name="SearchTextBox" Width="200" Margin="5"/>
-            <ComboBox x:Name="RoleFilterComboBox" Width="200" Margin="5" DisplayMemberPath="RoleName" SelectedValuePath="RoleID"/>
-            <Button Content="Поиск" Margin="5" Click="SearchButton_Click"/>
-        </StackPanel>
-
-        <DataGrid x:Name="EmployeesDataGrid" Grid.Row="2" AutoGenerateColumns="False" Margin="5">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Имя" Binding="{Binding FirstName}"/>
-                <DataGridTextColumn Header="Фамилия" Binding="{Binding LastName}"/>
-                <DataGridTextColumn Header="Должность" Binding="{Binding Roles.RoleName}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-    </Grid>
+            <DataGrid x:Name="EmployeesDataGrid" Grid.Row="2" AutoGenerateColumns="False" Margin="5">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Имя" Binding="{Binding FirstName}"/>
+                    <DataGridTextColumn Header="Фамилия" Binding="{Binding LastName}"/>
+                    <DataGridTextColumn Header="Должность" Binding="{Binding Role.RoleName}"/>
+                    <DataGridTemplateColumn Header="Действия">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <Button Content="Редактировать" Margin="0,0,5,0" Click="EditButton_Click"/>
+                                    <Button Content="Удалить" Click="DeleteButton_Click"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
+    </ScrollViewer>
 </Page>
